<resources>
    <string name="app_name">Charades</string>
    <string name="charades">Charades</string>
    <string name="celebrities">Celebrities</string>
    <string name="category_name">Category Name</string>
    <string name="_5">5</string>
    <string name="please_place_your_device_on_forehead">Please place your device on forehead.</string>
    <string name="guesses">Guesses</string>
    <string name="_60">60</string>
    <string name="results">Final Score</string>
    <string name="correct_answers">Correct</string>
    <string name="incorrect_answers">Incorrect</string>
    <string name="total">Total:</string>
    <string name="_10">10</string>
    <string name="aamir_khan">Aamir Khan</string>
    <string name="please_hold_mobile_vertically">[Please hold mobile vertically to continue.]</string>
    <string name="custom_category">Custom Category</string>
    <string name="guess_the_word">- Guess the word -</string>
    <string name="create_custom_deck">Create Custom Deck!</string>
    <string name="enter_the_words_one_below_the_other_using_enter_key">Enter the words, one below the other using enter key.</string>
    <string name="red_n_blue_n_yellow_n_green_n_purple">Type Here…</string>
    <string name="play">Play</string>
    <string name="back">Back</string>
    <string name="name">Name</string>
    <string name="tilt_up_to_pass">TILT UP TO PASS,</string>
    <string name="down_to_correct">DOWN TO CORRECT</string>
    <string name="settings">Settings</string>
    <string name="rate_us">Rate us</string>
    <string name="share">Share</string>
    <string name="favourites">Favorites</string>
    <string name="home">Home</string>
    <string name="sound">Sound</string>
    <string name="on">ON</string>
    <string name="bonus_time">Bonus Time</string>
    <string name="round_time">Round Time</string>
    <string name="_60s">60s</string>
    <string name="_80s">80s</string>
    <string name="_120s">120s</string>
    <string name="pakistani_celebrity">Pakistani Celebrity</string>
    <string name="hollywood_celebrity">Hollywood Celebrity</string>
    <string name="bollywood_celebrity">Bollywood Celebrity</string>
    <string name="choose_a_category">Choose a Category</string>
    <string name="how_to_play">How to Play</string>
    <string name="follow_instructions">Follow Instructions</string>
    <string name="place_phone_on_your_forehead_guess_the_word_while_your_friends_act_sing_or_describe_clues">Place phone on your forehead. Guess the word while your friends act, sing or describe clues.</string>
    <string name="tilt_the_phone_down_if_you_guessed_the_word">Tilt the phone downwards if you guessed the word.</string>
    <string name="tilt_the_phone_upwards_if_you_want_to_pass">Tilt the phone upwards if you want to pass.</string>
    <string name="guess_as_many_words_as_possible_in_the_shortest_time_possible">Guess as many words as possible in the shortest time possible.</string>
    <string name="ok">OK</string>
    <string name="score">Score</string>
    <string name="Final">Final</string>
    <string name="adUnitID">ca-app-pub-3940256099942544/1033173712</string>
    <string name="manifestAdID">ca-app-pub-3940256099942544~3347511713</string>
    <string name="bannerAdID">ca-app-pub-3940256099942544/6300978111</string>
    <string name="history">History</string>
    <string name="games_played">Games Played</string>
    <string name="_22">22</string>
    <string name="games_won">Games Won</string>
    <string name="_12">12</string>
    <string name="games_lost">Games Lost</string>
    <string name="games_draw">Games Draw</string>
    <string name="reset">Reset</string>
</resources>