<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">

        <item android:id="@+id/home"
            android:title="@string/home"
            android:icon="@drawable/ic_round_home_24"/>

        <item android:id="@+id/settings"
            android:title="@string/settings"
            android:icon="@drawable/ic_round_settings_24"/>

        <item android:id="@+id/history"
            android:title="@string/history"
            android:icon="@drawable/ic_baseline_history_24"/>

        <item android:id="@+id/instructions"
            android:title="@string/how_to_play"
            android:icon="@drawable/ic_round_question_mark_24"/>

        <item android:id="@+id/rating"
            android:icon="@drawable/ic_round_star_rate_24"
            android:title="@string/rate_us"/>

        <item android:id="@+id/share"
            android:icon="@drawable/ic_round_share_24"
            android:title="@string/share"/>
    </group>
</menu>