<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingTop="20dp"
    android:paddingEnd="20dp"
    android:weightSum="6"
    tools:context=".activities.GameActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:src="@drawable/back60"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/backText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/backBtn"
            android:fontFamily="@font/gothic"
            android:gravity="center_vertical"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/secondTimer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:fontFamily="@font/gothic"
            android:gravity="center"
            android:text="@string/_60"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/forehead"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/backBtn"
            android:fontFamily="@font/gothic"
            android:gravity="center"
            android:text="@string/please_place_your_device_on_forehead"
            android:textColor="@color/white"
            android:textSize="32sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/timer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="5"
        android:fontFamily="@font/gothic"
        android:gravity="center"
        android:text="@string/_5"
        android:textColor="@color/white"
        android:textSize="62sp" />

    <TextView
        android:id="@+id/guesses"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="5"
        android:fontFamily="@font/gothic"
        android:gravity="center"
        android:text="@string/guesses"
        android:textColor="@color/white"
        android:textSize="62sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/verticalWarning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gothic_light"
        android:gravity="center"
        android:layout_marginBottom="@dimen/_10sdp"
        android:text="@string/please_hold_mobile_vertically"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:visibility="gone"
         />

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        ads:adSize="BANNER"
        ads:adUnitId="@string/bannerAdID">
    </com.google.android.gms.ads.AdView>
</LinearLayout>