<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:weightSum="6"
    android:orientation="vertical"
    tools:context=".CelebritiesActivity">

    <TextView
        android:id="@+id/forehead"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fontFamily="@font/vanilla"
        android:gravity="center"
        android:text="@string/please_place_your_device_on_forehead"
        android:textColor="@color/white"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:fontFamily="@font/vanilla"
        android:gravity="center"
        android:text="@string/_5"
        android:textColor="@color/white"
        android:textSize="62sp" />

    <TextView
        android:id="@+id/secondTimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/vanilla"
        android:gravity="center"
        android:text="@string/_60"
        android:visibility="gone"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="42sp" />

    <TextView
        android:id="@+id/guesses"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fontFamily="@font/vanilla"
        android:gravity="center"
        android:text="@string/guesses"
        android:visibility="gone"
        android:textColor="@color/white"
        android:textSize="62sp" />

    <TextView
        android:id="@+id/verticalWarning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/please_hold_mobile_vertically"
        android:textColor="@color/white"
        android:textSize="28sp" />

</LinearLayout>