<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_20sdp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/choose_bg"
        android:fontFamily="@font/hobo"
        android:gravity="center"
        android:text="@string/history"
        android:textColor="@color/teal_700"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/pink_bg"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/guess_bg"
                android:fontFamily="@font/gothic"
                android:gravity="center"
                android:padding="@dimen/_3sdp"
                android:text="@string/games_played"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/games_played"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:fontFamily="@font/gothic"
                android:gravity="center"
                android:text="@string/_22"
                android:textColor="@color/teal_700"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/guess_bg"
                android:fontFamily="@font/gothic"
                android:gravity="center"
                android:padding="@dimen/_3sdp"
                android:text="@string/games_won"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/games_won"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:fontFamily="@font/gothic"
                android:gravity="center"
                android:text="@string/_12"
                android:textColor="@color/teal_700"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/guess_bg"
                android:fontFamily="@font/gothic"
                android:gravity="center"
                android:padding="@dimen/_3sdp"
                android:text="@string/games_lost"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/games_lost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:fontFamily="@font/gothic"
                android:gravity="center"
                android:text="@string/_10"
                android:textColor="@color/teal_700"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/guess_bg"
                android:fontFamily="@font/gothic"
                android:gravity="center"
                android:padding="@dimen/_3sdp"
                android:text="@string/games_draw"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/games_draw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/gothic"
                android:gravity="center"
                android:text="@string/_10"
                android:textColor="@color/teal_700"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/_20sdp"
            android:weightSum="2">

            <Button
                android:id="@+id/resetButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/_10sdp"
                android:backgroundTint="@color/mustard"
                android:fontFamily="@font/hobo"
                android:text="@string/reset"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/okButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:backgroundTint="@color/orange"
                android:fontFamily="@font/hobo"
                android:text="@string/ok"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>