<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:paddingTop="50dp"
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/pink_straight"
        android:orientation="vertical">

        <TextView
            android:id="@+id/guess_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/guess_bg"
            android:fontFamily="@font/hobo"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/guess_the_word"
            android:textColor="@color/white"
            android:textSize="22sp" />
        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/app_name"
            android:gravity="center"
            android:src="@drawable/charades" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/yellow_straight"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:fontFamily="@font/gothic"
                android:gravity="center"
                android:text="@string/sound"
                android:textColor="@color/black"
                android:textSize="26sp" />

            <ToggleButton
                android:id="@+id/soundButton"
                android:layout_width="180dp"
                android:layout_height="55dp"
                android:textColor="@color/white"
                android:checked="true"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_bg"
                android:fontFamily="@font/hobo"
                android:text="@string/on"
                android:textSize="20sp"
                android:theme="@style/navigation_theme" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:fontFamily="@font/gothic"
                android:gravity="center"
                android:text="@string/bonus_time"
                android:textColor="@color/black"
                android:textSize="26sp" />

            <ToggleButton
                android:id="@+id/bonusButton"
                android:layout_width="180dp"
                android:layout_height="55dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/white"
                android:background="@drawable/button_bg"
                android:fontFamily="@font/hobo"
                android:text="@string/on"
                android:textSize="20sp"
                android:theme="@style/navigation_theme" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:fontFamily="@font/gothic"
                android:gravity="center"
                android:text="@string/round_time"
                android:textColor="@color/black"
                android:textSize="26sp" />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/toggleButtonGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:singleSelection="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <Button
                    android:id="@+id/btnSixty"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textAllCaps="false"
                    android:layout_height="wrap_content"
                    android:text="@string/_60s" />

                <Button
                    android:id="@+id/btnEighty"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textAllCaps="false"
                    android:text="@string/_80s" />

                <Button
                    android:id="@+id/btnTwenty"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:textAllCaps="false"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/_120s" />

            </com.google.android.material.button.MaterialButtonToggleGroup>

            <Button
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/hobo"
                android:backgroundTint="@color/orange"
                android:text="@string/back"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>