<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pink_straight"
    android:orientation="vertical"
    tools:context=".activities.InstructionsActivity">

    <TextView
        android:id="@+id/guess_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/guess_bg"
        android:fontFamily="@font/hobo"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/guess_the_word"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/app_name"
        android:gravity="center"
        android:src="@drawable/charades" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/yellow_straight">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gothic"
                android:gravity="center"
                android:text="@string/follow_instructions"
                android:textColor="#403E3E"
                android:textSize="22sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/gothic_light"
                android:text="@string/place_phone_on_your_forehead_guess_the_word_while_your_friends_act_sing_or_describe_clues"
                android:textColor="#403E3E"
                android:textStyle="bold"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/app_name"
                android:gravity="center"
                android:src="@drawable/question_mark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/gothic_light"
                android:text="@string/tilt_the_phone_down_if_you_guessed_the_word"
                android:textColor="#403E3E"
                android:textStyle="bold"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/app_name"
                android:gravity="center"
                android:src="@drawable/right" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/gothic_light"
                android:text="@string/tilt_the_phone_upwards_if_you_want_to_pass"
                android:textColor="#403E3E"
                android:textStyle="bold"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/app_name"
                android:gravity="center"
                android:src="@drawable/wrong" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/gothic_light"
                android:text="@string/guess_as_many_words_as_possible_in_the_shortest_time_possible"
                android:textColor="#403E3E"
                android:textStyle="bold"
                android:textSize="20sp" />

            <Button
                android:id="@+id/okButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/orange"
                android:fontFamily="@font/hobo"
                android:layout_marginEnd="60dp"
                android:layout_marginStart="60dp"
                android:text="@string/ok"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>